Fixed some alignment issues on splash page, working on beautifying sign up page.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,9 @@ h1, h2, h3, h4, h5, h6{
 #custom-bootstrap-menu, footer, body{
   font-family: 'Mukta Vaani', sans-serif;
 }
+#custom-bootstrap-menu{
+  height: 7vh;
+}
 #custom-bootstrap-menu.navbar-default .navbar-brand {
     color: rgba(119, 119, 119, 1);
 }
@@ -89,13 +92,14 @@ button.signup span{
 
 #ourBanner{
   width: 100vw;
-  height: 100vh;
+  height: 93vh;
   font-family: 'Fjalla One', sans-serif;
   color: #FFDA00;
+  margin-top: -1.3%;
 }
 #makeTransparent{
   width: 100vw;
-  height: 100vh;
+  height: 93vh;
   background-color: rgba(0, 0, 0, .75);
   position: absolute;
   z-index: 0;
@@ -103,7 +107,7 @@ button.signup span{
 }
 #bottomButt{
   width: 100vw;
-  height: 100vh;
+  height: 93vh;
   position: absolute;
   z-index: 10;
   text-align: center;
@@ -119,7 +123,7 @@ button.signup span{
 #bannerText{
   display: table;
   width: 100vw;
-  height: 100vh;
+  height: 93vh;
   line-height: normal;
 }
 #bannerText h1{
@@ -264,4 +268,31 @@ h5{
 .autocomplete-suggestions strong { font-weight: normal; color: #3399ff; }
 #hackey2{
   width: 16.666667%;
+}
+#loginButts{
+  display: inline-block;
+  margin-left: 6vw;
+}
+#signupForm{
+  display: flex;
+  flex-direction: column;
+}
+#signupForm input{
+  width: 25vw;
+  height: 7vh;
+  margin-bottom: 4vh;
+  margin-left: 2vw;
+}
+#signBut{
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 15vw;
+  height: 8vh;
+  font-size: 1.4em;
+  text-align: center;
+  margin-top: 2vh;
+  color: white;
+  border: none;
+  background-color: rgb(255, 218, 0);
+  padding: auto;
 }
